Resolves IE Button overflow

--- a/src/styles.less
+++ b/src/styles.less
@@ -74,8 +74,9 @@
     }
 }
 
-.one-filter {
-    flex-basis:65%;
+.buttons-flex {
+    max-width: 180px;
+    flex-basis: 180px;
 }
 
 .one-filter-full {
